// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API keys section index creates snapshot 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column flex-grow-1"
  >
    <div
      class="text-center p-5 wrapper undefined"
    >
      <div
        class="spinner-border text-primary spinner undefined"
        role="status"
      >
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
    <main
      class="container p-0"
      role="main"
    >
      <div
        class="flex-grow-1"
      >
        <div
          class="d-flex flex-row align-items-center justify-content-between pb-2 border-bottom"
        >
          <div
            class="h3 pb-0 title"
          >
            API keys
          </div>
          <div>
            <button
              class="btn btn-secondary btn-sm text-uppercase btnAction"
              data-testid="addAPIKeyBtn"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center"
              >
                <svg
                  class="d-inline d-md-none"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
                <svg
                  class="d-none d-md-inline mr-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                </svg>
                <span
                  class="d-none d-md-inline"
                >
                  Add
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="mx-auto mt-4 mt-md-5 wrapper"
        />
        <div>
          <div
            class="modal modal"
            role="dialog"
          >
            <div
              class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
            >
              <div
                class="modal-content content modal"
              >
                <div
                  class="modal-header d-flex flex-row align-items-center header"
                >
                  <div
                    class="h3 m-2 title"
                  >
                    Add API key
                  </div>
                  <button
                    class="close"
                    data-testid="closeModalBtn"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  class="modal-body p-4 h-100 d-flex flex-column"
                />
                <div
                  class="modal-footer p-3"
                >
                  <button
                    class="btn btn-secondary"
                    data-testid="apiKeyFormBtn"
                    type="button"
                  >
                    Add
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`API keys section index creates snapshot 2`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column flex-grow-1"
  >
    <main
      class="container p-0"
      role="main"
    >
      <div
        class="flex-grow-1"
      >
        <div
          class="d-flex flex-row align-items-center justify-content-between pb-2 border-bottom"
        >
          <div
            class="h3 pb-0 title"
          >
            API keys
          </div>
          <div>
            <button
              class="btn btn-secondary btn-sm text-uppercase btnAction"
              data-testid="addAPIKeyBtn"
            >
              <div
                class="d-flex flex-row align-items-center justify-content-center"
              >
                <svg
                  class="d-inline d-md-none"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
                <svg
                  class="d-none d-md-inline mr-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                  />
                </svg>
                <span
                  class="d-none d-md-inline"
                >
                  Add
                </span>
              </div>
            </button>
          </div>
        </div>
        <div
          class="mx-auto mt-4 mt-md-5 wrapper"
        >
          <div
            class="mt-4 mt-md-5"
          >
            <div
              class="list-group mt-4 mt-md-5"
              data-testid="apiKeysList"
            >
              <li
                class="list-group-item listItem"
                data-testid="APIKeyCard"
              >
                <div
                  class="d-flex flex-row w-100 justify-content-between"
                >
                  <div
                    class="h5 mb-1 titleCard"
                  >
                    key1
                  </div>
                  <div
                    class="d-flex flex-nowrap position-relative buttons"
                  >
                    <button
                      class="btn btn-sm btn-link text-secondary text-center btnAction"
                      data-testid="updateAPIKeyBtn"
                    >
                      <div
                        class="d-flex flex-row align-items-center"
                      >
                        <svg
                          class="mr-sm-2 btnIcon"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                          />
                        </svg>
                        <span
                          class="d-none d-sm-inline"
                        >
                          Edit
                        </span>
                      </div>
                    </button>
                    <div
                      class="mx-2 my-auto d-none d-sm-inline separator"
                    />
                    <button
                      class="btn btn-sm btn-link text-secondary text-center btnAction"
                      data-testid="deleteAPIKeyDropdownBtn"
                    >
                      <div
                        class="d-flex flex-row align-items-center"
                      >
                        <svg
                          class="mr-sm-2 btnIcon"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                          />
                        </svg>
                        <span
                          class="d-none d-sm-inline"
                        >
                          Delete
                        </span>
                      </div>
                    </button>
                    <div
                      class="dropdown-menu dropdown-menu-right p-0 dropdown"
                    >
                      <div
                        class="arrow arrow"
                      />
                      <p
                        class="p-3 text-center mb-0"
                      >
                        Are you sure you want to remove this API key?
                      </p>
                      <div
                        class="dropdown-divider m-0"
                      />
                      <div
                        class="d-flex flex-row justify-content-between p-3"
                      >
                        <button
                          class="btn btn-sm btn-light text-uppercase btnLight"
                        >
                          <div
                            class="d-flex flex-row align-items-center"
                          >
                            <svg
                              class="mr-2"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M256 48C140.559 48 48 140.559 48 256c0 115.436 92.559 208 208 208 115.435 0 208-92.564 208-208 0-115.441-92.564-208-208-208zm104.002 282.881l-29.12 29.117L256 285.117l-74.881 74.881-29.121-29.117L226.881 256l-74.883-74.881 29.121-29.116L256 226.881l74.881-74.878 29.12 29.116L285.119 256l74.883 74.881z"
                              />
                            </svg>
                            <span>
                              Cancel
                            </span>
                          </div>
                        </button>
                        <button
                          class="btn btn-sm btn-danger"
                          data-testid="deleteAPIKeyBtn"
                        >
                          <div
                            class="d-flex flex-row align-items-center text-uppercase"
                          >
                            <svg
                              class="mr-2 btnDeleteIcon"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 448 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                              />
                            </svg>
                            <span>
                              Delete
                            </span>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-2 text-truncate"
                >
                  <small
                    class="text-muted text-uppercase mr-1"
                  >
                    Created at: 
                  </small>
                  <small>
                    2020/06/18 16:35:39 (+00:00)
                  </small>
                </div>
              </li>
              <li
                class="list-group-item listItem"
                data-testid="APIKeyCard"
              >
                <div
                  class="d-flex flex-row w-100 justify-content-between"
                >
                  <div
                    class="h5 mb-1 titleCard"
                  >
                    key2
                  </div>
                  <div
                    class="d-flex flex-nowrap position-relative buttons"
                  >
                    <button
                      class="btn btn-sm btn-link text-secondary text-center btnAction"
                      data-testid="updateAPIKeyBtn"
                    >
                      <div
                        class="d-flex flex-row align-items-center"
                      >
                        <svg
                          class="mr-sm-2 btnIcon"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
                          />
                        </svg>
                        <span
                          class="d-none d-sm-inline"
                        >
                          Edit
                        </span>
                      </div>
                    </button>
                    <div
                      class="mx-2 my-auto d-none d-sm-inline separator"
                    />
                    <button
                      class="btn btn-sm btn-link text-secondary text-center btnAction"
                      data-testid="deleteAPIKeyDropdownBtn"
                    >
                      <div
                        class="d-flex flex-row align-items-center"
                      >
                        <svg
                          class="mr-sm-2 btnIcon"
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 448 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                          />
                        </svg>
                        <span
                          class="d-none d-sm-inline"
                        >
                          Delete
                        </span>
                      </div>
                    </button>
                    <div
                      class="dropdown-menu dropdown-menu-right p-0 dropdown"
                    >
                      <div
                        class="arrow arrow"
                      />
                      <p
                        class="p-3 text-center mb-0"
                      >
                        Are you sure you want to remove this API key?
                      </p>
                      <div
                        class="dropdown-divider m-0"
                      />
                      <div
                        class="d-flex flex-row justify-content-between p-3"
                      >
                        <button
                          class="btn btn-sm btn-light text-uppercase btnLight"
                        >
                          <div
                            class="d-flex flex-row align-items-center"
                          >
                            <svg
                              class="mr-2"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 512 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M256 48C140.559 48 48 140.559 48 256c0 115.436 92.559 208 208 208 115.435 0 208-92.564 208-208 0-115.441-92.564-208-208-208zm104.002 282.881l-29.12 29.117L256 285.117l-74.881 74.881-29.121-29.117L226.881 256l-74.883-74.881 29.121-29.116L256 226.881l74.881-74.878 29.12 29.116L285.119 256l74.883 74.881z"
                              />
                            </svg>
                            <span>
                              Cancel
                            </span>
                          </div>
                        </button>
                        <button
                          class="btn btn-sm btn-danger"
                          data-testid="deleteAPIKeyBtn"
                        >
                          <div
                            class="d-flex flex-row align-items-center text-uppercase"
                          >
                            <svg
                              class="mr-2 btnDeleteIcon"
                              fill="currentColor"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="0"
                              viewBox="0 0 448 512"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                              />
                            </svg>
                            <span>
                              Delete
                            </span>
                          </div>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-2 text-truncate"
                >
                  <small
                    class="text-muted text-uppercase mr-1"
                  >
                    Created at: 
                  </small>
                  <small>
                    2020/06/18 16:35:39 (+00:00)
                  </small>
                </div>
              </li>
            </div>
          </div>
        </div>
        <div>
          <div
            class="modal modal"
            role="dialog"
          >
            <div
              class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable"
            >
              <div
                class="modal-content content modal"
              >
                <div
                  class="modal-header d-flex flex-row align-items-center header"
                >
                  <div
                    class="h3 m-2 title"
                  >
                    Add API key
                  </div>
                  <button
                    class="close"
                    data-testid="closeModalBtn"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  class="modal-body p-4 h-100 d-flex flex-column"
                />
                <div
                  class="modal-footer p-3"
                >
                  <button
                    class="btn btn-secondary"
                    data-testid="apiKeyFormBtn"
                    type="button"
                  >
                    Add
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
